# bitcoin

./: .gitignore  CMakeLists.bak.txt  CMakeLists.txt
build_cmake/: CMakeLists.txt  README.md  bitcoin-config.h.in  note-cmake-build-windows.md  note-static-build.md
build_cmake/CMakeModules/: BoostTestHelper.cmake  BoostTestHelpers.cmake  Common.cmake  FindLibevent.cmake  FindLibminiupnpc.cmake  FindOpenSSL.cmake  FindOpenSSLHelper.cmake  FindQt5.cmake  FindRapidcheck.cmake  FindZMQ.cmake  Findlibdb_cxx.cmake  MakeLink.cmake  TargetArch.cmake  get_filename_windows_fix.cmake  mklink.py  vcpkg.cmake
build_cmake/bench_bitcoin/: CMakeLists.txt  gen_raw_h.py
build_cmake/bitcoin-cli/: CMakeLists.txt
build_cmake/bitcoin-tx/: CMakeLists.txt
build_cmake/bitcoind/: CMakeLists.txt
build_cmake/config_h/: CMakeLists.txt  bitcoin-config.cmake.h.in  change_config.h.sh  relink.cmake
build_cmake/libbitcoin_cli/: CMakeLists.txt
build_cmake/libbitcoin_common/: CMakeLists.txt
build_cmake/libbitcoin_consensus/: CMakeLists.txt
build_cmake/libbitcoin_crypto/: CMakeLists.txt
build_cmake/libbitcoin_server/: CMakeLists.txt
build_cmake/libbitcoin_util/: CMakeLists.txt
build_cmake/libbitcoin_wallet/: CMakeLists.txt
build_cmake/libbitcoin_zmq/: CMakeLists.txt
build_cmake/libleveldb/: CMakeLists.txt
build_cmake/libsecp256k1/: CMakeLists.txt  libsecp256k1-config.cmake.hin
build_cmake/libunivalue/: CMakeLists.txt
build_cmake/test_bitcoin/: CMakeLists.txt  gen_json_h.py  get_json_header.cmake
build_cmake/test_bitcoin_fuzzy/: CMakeLists.txt
src/: Makefile.am  init.cpp
src/config/: bitcoin-config.cmake.h  bitcoin-config.gcc.h  bitcoin-config.linux.gcc.h
